DONE
====

*   09/15/2010  added sortable table columns


TODO
====

*   DONE Allow for output sorting on various fields NJC 09/15/2010 
*   Have an option to exclude from output anything below the horizon 09/15/2010  